# p2p-file-transfer-frontend

./: Cargo.toml  README.md  index.html
file-transfer-app/: README.md  package-lock.json  package.json
file-transfer-app/components/: FileReceiver.tsx
file-transfer-app/contexts/: TabNavigation.tsx  WebSocketContext.tsx
file-transfer-app/src/app/: globals.css  layout.tsx  page.tsx
file-transfer-app/src/app/components/: FileTransfer.tsx
file-transfer-app/src/app/contexts/: WebSocketContext.tsx
file-transfer-app/utils/: websocketManager.ts
src/: main.rs
