[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "=0.7", features = ["ws"]}
tokio ={ version = "1.0 " , features = ["full"]}
serde={ version = "1.0 " , features =["derive"]}
serde_json =  "1.0" 
uuid= {version = "1.4", features = ["v4"]}
futures= "0.3"
futures-util = "0.3"
